--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=apiAuthetication
+spring.datasource.url = jdbc:postgresql://localhost:5432/Users
+spring.datasource.username=postgres
+spring.datasource.password=admin
